# mobiTIC

./: .env  .gitignore  README.md  data_download  interactive_map  iris.py  main.py  notebook.ipynb  pyproject.toml
data_lyon/: iris_lyon.geojson
src/: main.py
src/config/: __init__.py  categories.py  settings.py
src/utils/: data_downloader.py  data_manager.py  map_generator.py
