[project]
name = "mobitic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "pandas>=2.3.3",
    "py7zr>=1.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
